REGRESSION: API test _WKDownload.ConvertResponseToDownload is a flaky timeout https://bugs.webkit.org/show_bug.cgi?id=164631

Reviewed by Carlos Garcia Campos.

* NetworkProcess/NetworkResourceLoader.cpp:
(WebKit::NetworkResourceLoader::convertToDownload):
I could reproduce the flaky failure 100% of the time when not using NETWORK_SESSION
by adding a usleep(1000000) in NetworkResourceLoader::convertToDownload.  m_networkLoad
was not being set to nullptr before it was being checked in NetworkResourceLoader::abort



Canonical link: https://commits.webkit.org/182591@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208880 268f45cc-cd09-0410-ab3c-d52691b4dbfc